--- a/style.scss
+++ b/style.scss
@@ -10,17 +10,69 @@ body{
 }
 
 #overlay{
-    background: black;
+    background: url('assets/95.png') bottom center no-repeat;
+    background-size: cover;
     width: 100vw;
     height: 100vh;
-    color: white;
+    color: black;
     z-index: 1000;
+    
+    audio{
+        margin: 20px;
+    }
 
     .row{
         height: 100%;
         display: flex;
         align-content: center;
         justify-content: center;
+    }
+}
+
+.card{
+    border: 2px solid darkgray;
+    background: lightgray;
+    padding: 10px 5px;
+}
+.card-body{
+    background: white;
+    padding: 0;
+    border: 2px solid darkgray;
+}
+.top-bar{
+    text-align: left;
+    padding: 2px 0 4px 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: linear-gradient(0deg, rgba(179,179,179,1) 0%, rgba(242,242,242,1) 4%, rgba(255,255,255,1) 21%, rgba(251,251,251,1) 38%, rgba(200,200,200,1) 92%, rgba(255,255,255,1) 100%);
+}
+.close{
+    background: red;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2px;
+    color: white;
+}
+
+#beachball{
+    width: 50vw;
+    animation: spinning 2s infinite linear;
+    cursor: pointer;
+    @media only screen and (min-width: 700px){
+        width: 5vw;
+    }
+    margin: 20px 0;
+}
+@keyframes spinning{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
     }
 }
 
@@ -44,26 +96,26 @@ body{
 }
 
 #loading {
-    color: white;
+    background: url('assets/95.png') bottom center no-repeat;
+    background-size: cover;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background: black;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   #loading .progress {
     margin: 1.5em;
-    border: 1px solid white;
+    border: 1px solid black;
     width: 50vw;
-    background: black;
+    background: white;
   }
   #loading .progressbar {
     margin: 2px;
-    background: white;
+    background: black;
     height: 1em;
     transform-origin: top left;
     width: 0%;
@@ -72,37 +124,30 @@ body{
 
 
 .popup-window{
-    background: rgba(0, 0, 0, 0.8);
     width: 100vw;
     height: 100vh;
-    z-index: -10;
+    z-index: 1000;
     position: fixed;
     top: 0;
     left: 0;
-    color: white;
-    opacity: 0;
+    color: black;
     transition: opacity 1s ease;
-    #btn-close{
-        position: fixed;
-        top: 10px;
-        right: 10px;
-    }
-    canvas{
-        display: none;
-        width: 100vw;
-        height: 100vh;
-    }
     iframe{
-        width: 90vw;
-        height: 90vh;
-        margin-left: 5vw;
-        margin-top: 70px;
-        border: none;
-        border-radius: 5px;
+        width: 100%;
+        height: 80vh;
+        background: url('assets/background.jpeg') bottom center no-repeat;
+        background-size: cover;
+    }
+    audio{
+        margin: 50px;
+    }
+    .content{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
-.hide{
-    opacity: 0;
-    transition: opacity 1s ease;
+.opaque{
+    opacity: 0.5;
 }
